reformat views to work with Controllers

--- a/MusicSort/Views/Home/Index.cshtml
+++ b/MusicSort/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
-<h1>Welcome to Ricc's Records</h1>
-<h3><a href='/catalogs/new'>Create a new Record catalog</a></h3>
-<h3><a href='/catalogs'>View catalogs</a></h3>
+@{
+    Layout = "_Layout";
+}
+
+<h1>Welcome to Ricc's Records!</h1>
+<h3><a href='/artists'>View artists</a></h3>
+<h3><a href='/artists/new'>Add a new artist</a></h3>
